Fix header margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ header {
   z-index: 1000;
   background-color: #00163f;
   width: 100%;
+  padding: 0%;
+  margin: 0%;
 }
 
 header .container {
